# Skills-Architects-HK

./: .gitignore  BIM Manager.md  Blueprint & Toolkit- Creating High-Performance Claude Professional Skills.md  LEED Consultant.md  LICENSE  README.md  Role Create Prompt.txt  TODO.py  hk-architect-master.skill  pyproject.toml
.cursor/plans/: generalize_skills_blueprint_e7dc3800.plan.md  hk_architect_desk_product_6df76c2f.plan.md  hk_plan_of_work_skill_a0ddefc7.plan.md  hk_procurement_strategy_skill_5743d3dc.plan.md  hk_suite_blueprint_review_d326c140.plan.md  pre-construction_skills_coverage_4ed4b028.plan.md
.cursor/rules/: hk-architect-skills.mdc
Claude Desktop/: README.md  SKILL.md  main.py
Claude Desktop/core/: __init__.py  calculators.py
Claude Desktop/sub_skills/: OTHERS.py
Reference/: A Global History of Architecture - 3E (2017).md
SS/.claude-plugin/: plugin.json
docs/: architect-skill-blueprint-reference.md
hk-architect-master/: SKILL.md  VERIFICATION.md  main.py
hk-architect-master/evals/: evals.json
hk-architect-master/hk_architect_skills.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hk-architect-master/references/: compliance.md  config.json  domain_terms.json  hk-common-material-dimensions.md  hk-construction-sequence-swimlanes.md  hk-construction-stakeholder-register.md  hk-human-scale-dimensions.md  hk-ofca-licensed-works.md  hk-site-establishment-checklist.md  hk-td-submission-types.md  hk-typhoon-eot-by-procurement.md  operational.md
hk_architect_skills/: __init__.py  cli.py  dispatcher.py  paths.py
(+588 files in other folders)
